[gd_scene load_steps=5 format=3 uid="uid://71ghb7srq274"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_eai72"]
[ext_resource type="PackedScene" uid="uid://c1qeyw8dvuyr0" path="res://objects/SceneTransitionRect.tscn" id="1_hhur2"]
[ext_resource type="Theme" uid="uid://qptg45ah4jvf" path="res://assets/title.tres" id="2_eoopj"]
[ext_resource type="Theme" uid="uid://di27dnuurrglr" path="res://assets/subtitle.tres" id="4_15d6h"]

[node name="Menu" type="Node"]
script = ExtResource("1_eai72")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 99
follow_viewport_enabled = true

[node name="SceneTransitionRect" parent="CanvasLayer" instance=ExtResource("1_hhur2")]

[node name="Menu" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="title" type="Label" parent="Menu"]
offset_left = 128.0
offset_top = 56.0
offset_right = 1536.0
offset_bottom = 320.0
theme = ExtResource("2_eoopj")
theme_override_colors/font_color = Color(0.290196, 0.211765, 0.196078, 1)
theme_override_colors/font_outline_color = Color(0.45098, 0.360784, 0.34902, 1)
theme_override_constants/outline_size = 35
text = "Prototype"

[node name="level1" type="Button" parent="Menu"]
modulate = Color(0.45098, 0.360784, 0.34902, 1)
offset_left = 128.0
offset_top = 376.0
offset_right = 640.0
offset_bottom = 632.0
theme = ExtResource("4_15d6h")
text = "LEVEL 1"

[node name="level2" type="Button" parent="Menu"]
modulate = Color(0.45098, 0.360784, 0.34902, 1)
offset_left = 704.0
offset_top = 376.0
offset_right = 1216.0
offset_bottom = 632.0
theme = ExtResource("4_15d6h")
text = "LEVEL 2"

[node name="level3" type="Button" parent="Menu"]
modulate = Color(0.45098, 0.360784, 0.34902, 1)
offset_left = 1280.0
offset_top = 376.0
offset_right = 1792.0
offset_bottom = 632.0
theme = ExtResource("4_15d6h")
text = "LEVEL 3"

[node name="level4" type="Button" parent="Menu"]
modulate = Color(0.45098, 0.360784, 0.34902, 1)
offset_left = 128.0
offset_top = 696.0
offset_right = 640.0
offset_bottom = 952.0
theme = ExtResource("4_15d6h")
text = "LEVEL 4"

[node name="level5" type="Button" parent="Menu"]
modulate = Color(0.45098, 0.360784, 0.34902, 1)
offset_left = 704.0
offset_top = 696.0
offset_right = 1216.0
offset_bottom = 952.0
theme = ExtResource("4_15d6h")
text = "LEVEL 5"

[node name="level6" type="Button" parent="Menu"]
modulate = Color(0.45098, 0.360784, 0.34902, 1)
offset_left = 1280.0
offset_top = 696.0
offset_right = 1792.0
offset_bottom = 952.0
theme = ExtResource("4_15d6h")
text = "LEVEL 6"

[connection signal="pressed" from="Menu/level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Menu/level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Menu/level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Menu/level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Menu/level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Menu/level6" to="." method="_on_level_6_pressed"]
